mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Filter Content -->
 		<p>
-			Just nothing but trouble
+			Just stuff for now
 		</p>
 	</main>
 	<footer class="container">
