--- a/simple.html
+++ b/simple.html
@@ -20,6 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
+	<p>&copy. 2012.Git Training, all rights reserver.</p>
 	</footer>
 </body>
 </html>
