Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- Copyright 2014 Git.Training
      Adding changes before rebasing conflicts -->
 <head>
-	<title>A very respectful Website</title>
+	<title>Updating Title for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,7 +16,7 @@
 	<main class="container">
 	<!-- Junk Filter Content -->
 		<p>
-			Just stuff for now
+			Adding more important contents here
 		</p>
 	</main>
 	<footer class="container">
