Updating for tag  1.2

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- Copyright 2014 Git.Training
      Adding changes before rebasing conflicts -->
 <head>
-	<title>Updating Title for stash branch example</title>
+	<title>Updating Title for tagging example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
